# test_ci_cd

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  gtest_main.cpp  gtest_version.cpp  install_manifest.txt  main.cpp
.github/workflows/: main.yml
install/app/: CMakeLists.txt  test_cmake.pro
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/common/: CMakeLists.txt  Makefile  cmake_install.cmake  common.cpp  version.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/otus_main_point/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  mainwindow.cpp  otus_main_point
src/otus_main_point/otus_main_point_autogen/: moc_predefs.h
src/otus_main_point/tests/: CMakeLists.txt  Makefile  cmake_install.cmake
src/otus_main_point/tests/boost_/: CMakeLists.txt  Makefile  cmake_install.cmake  test_main_boost  test_main_boost.cpp  test_main_boost.hpp
src/otus_main_point/tests/boost_/test_main_boost_autogen/: moc_predefs.h
src/otus_main_point/tests/google_/: CMakeLists.txt  Makefile  cmake_install.cmake  test_main_google.cpp  test_main_google.hpp  test_main_google_fmain.cpp
src/plugin_auto_lambda/: CMakeLists.txt  Makefile  cmake_install.cmake  plugin_auto_lambda.cpp  plugin_auto_lambda.h  plugin_auto_lambda.hpp
src/plugin_auto_lambda/plugin_auto_lambda_autogen/: moc_predefs.h
version/: version.h.in
